# SystemStatsCollector

./: CMakeLists.txt  README.md
conf/: defconf.conf  deployconf.conf
data_io/: CMakeLists.txt
data_io/include/: conf_io.h  stats_io.h
data_io/src/: conf_io.c  stats_io.c
include/: globals.h
src/: stat_collector.c
